--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,7 @@ dist/
 # Package files
 *.jar
 
+
 # Maven
 target/
 dist/
@@ -88,6 +89,7 @@ npm-debug.log
 yarn-error.log
 testem.log
 /typings
+package-lock.json
 
 # System Files
 .DS_Store
