--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test",
+    "test": "ng test --code-coverage=true",
     "build:dev": "ng build --configuration=dev --output-hashing none --extra-webpack-config webpack.extra.js && node build-script.js"
   },
   "private": true,
@@ -27,7 +27,6 @@
     "fs-extra": "^4.0.3",
     "glob": "^7.2.0",
     "lodash": "^4.17.21",
-    "ngx-avatars": "^1.5.0",
     "ngx-build-plus": "^15.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
