--- a/deployment/deployment.yaml
+++ b/deployment/deployment.yaml
@@ -12,9 +12,7 @@ spec:
       targetPort: 9040
   selector:
     app: header-layout1
-  type: ClusterIP
-status:
-  loadBalancer: {}
+  type: NodePort
 ---
 apiVersion: apps/v1
 kind: Deployment
